# yt-jsc-youtubei

./: .gitmodules  README.md  pyproject.toml  setup.py
yt_dlp_plugins/extractor/: yt_jsc_youtubei.py
